// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parseVersionByNpmPackageArg typescript 1`] = `
{
  "name": "typescript",
  "version": "*",
}
`;

exports[`parseVersionByNpmPackageArg typescript@>= 1 & < 2 1`] = `
{
  "name": "typescript",
  "version": ">= 1 & < 2",
}
`;

exports[`parseVersionByNpmPackageArg typescript@1 1`] = `
{
  "name": "typescript",
  "version": "1",
}
`;
